* Added legal basis to processes, so GDPR export can be done
